[project]
name = "pynbTurtle"
version = "1.0.3"
authors = [
  { name="Reto Schwander", email="reto.schwander@sbl.ch" },
]
description = "Ein Turtle-Grafik-Paket für Jupyter-Notebooks"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]

[project.urls]
Homepage = "https://github.com/screto/pynbTurtle-master.git"
Issues = "https://github.com/screto/pynbTurtle-master.git"

[tool.setuptools]
# sorgt dafür, dass package_data berücksichtigt wird
include-package-data = true

[tool.setuptools.package-data]
"pynbTurtle" = [
  "static/*.html",
  "static/*.js",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
